--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background:30, 26%, 82%;
-    --foreground:190, 92%, 29%;
+    --foreground:190, 92%, 29%
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
